--- a/distribution.html
+++ b/distribution.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<h2>Chapter Assignment (Equal Distribution)</h2>
+<h2>Chapter Assignment</h2>
 
 <table border="1" cellspacing="0" cellpadding="6">
   <tr>
